--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "math-10-seconds",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": " APP Math 10 Seconds",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server",
+    "dev": "nodemon server"
   },
+  "author": "Hamza Joshan",
+  "license": "MIT",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
