--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "math-10-seconds",
-  "version": "1.0.0",
-  "description": " APP Math 10 Seconds",
-  "main": "server.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "start": "node ./bin/www"
   },
-  "author": "Hamza Joshan",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   }
 }
